# mcp_cla_pg

./: .gitignore  AUDIT_EVIDENCE_PACK.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  functional_test.py  package.json  pyproject.toml  requirements.txt  run_analysis.py  run_analysis_cli.py  server.py  stress_test_v2.py  test_docker_pg96.py  test_logging.py  test_npx_pg96.py  test_results.json  test_tools_pg96.py  test_uv_pg96.py
.trae/documents/: Create Remote PostgreSQL MCP Server with OAuth and Docker.md  Implement Materialized View Recommendation Tool.md  Integrate Auth0 Authentication for MCP Server.md  Test All MCP Tools Against Temporary PostgreSQL 9.6 Container.md
deploy/: aws-ecs.yaml  azure-aca.bicep
plan/: feature-fastmcp-server-alignment-1.md  feature-session-monitor-sessions-table-1.md
tests/: functional_test.py  test_hardening.py  test_logging.py  test_security_perf_oltp.py  test_tools_pg96.py
