[project]
name = "mcp-postgres"
version = "0.1.0"
description = "PostgreSQL MCP Server for DBA-oriented tools"
authors = [
    { name = "Harry Valdez" }
]
dependencies = [
    "fastmcp[auth]<3",
    "psycopg[binary,pool]>=3.2.0",
    "starlette>=0.36.0",
]
requires-python = ">=3.12"

[project.scripts]
mcp-postgres = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
